build.gradle.kts: Update Jitsi dependency version